SpiderData/csdn/Clean/00867.txt
printå‡½æ•°é»˜è®¤æ˜¯æ¢è¡Œï¼Œå¦‚æžœè¦æ›¿æ¢è¿™ä¸ªæ¢è¡Œï¼Œè‚¯å®šé¦–å…ˆæƒ³åˆ°æ‰“çš„æ˜¯endï¼Œç„¶åŽ æˆ‘ä¸€ç”¨endå‘çŽ°ä¸€ç›´æ˜¯æŠ¥é”™ã€‚
 å› ä¸ºæ¯”è¾ƒå°´å°¬ï¼Œå…¶ä»–çš„è¯•é”™çŽ¯èŠ‚æˆ‘å°±ä¸æ”¾å‡ºæ¥äº†ðŸ˜¢

äº‹å®žä¸Šï¼ŒPython3ä¸­printé‡Œä¼šè‡ªå¸¦endï¼Œä½†æ˜¯Python2é‡Œæ˜¯æ²¡æœ‰çš„ï¼Œæ€Žä¹ˆåŠžå‘¢ï¼Ÿ

from __future__ import print_function

è°ƒç”¨ä¸€ä¸ªå‡½æ•°å°±è§£å†³å•¦ï¼
 æ•ˆæžœå›¾å¦‚ä¸‹ï¼š

>>> a=0
>>> while a<5:
...     print(a,end=' ')
  File "<stdin>", line 2
    print(a,end=' ')
               ^
SyntaxError: invalid syntax
>>> from __future__ import print_function
>>> while a<5:
...     print(a,end=',')
...     a=a+1
...
0,1,2,3,4,>>>
>>> a=0
>>> while a<5:
...     print(a,end=' ')
...     a=a+1
...
0 1 2 3 4 >>>

